--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generador de excusas</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./4geeks.ico" />
-</head>
-<body>
-<header>
-    <div class="container text-center mt-3">
-        <div class="row align-items-start">
-          <div class="col-">           
-            <h1 class="text-primary">Mi Generador de excusas</h1>
+    <title>Mi Generador de Excusas</title>
+    <!-- Fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./style.css"/>
+  </head>
+  <body>
+    <!-- Manteniendo el código original con solo correcciones de etiquetas -->
+    <header>
+      <div class="container text-center mt-4">
+        <div class="w-100 row align-items-start" style="background-color: aqua">
+          <h1 style="color: crimson">Mi Generador de Excusas</h1>
         </div>
+        <div class="row align-items-center">
+          <div class="col alert-warning">
+            <p class="btn btn-success p-3 mt-5">
+              Este es mi Generador de Excusas en 4Geeks Academy Bootcamp, espero
+              que les guste.😊
+              
+            </p>
+          </div>
         </div>
-    </div>     
-</header>
-    <p id="textoExcusa">Mi hija me cogio el coche para trabajar</p>
-    <script src="app.js"></script>
-</body>
+        <div class="cajaexcusa text-center" >
+          <h3 id="excuse"></h3>
+        </div>
+        <div class="fixed-bottom p-1 mb-5">
+          Made with :corazón: by
+          <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        </div>
+      </div>
+    </header>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
